# QTE

./: .coveragerc  .gitignore  .pre-commit-config.yaml  COMMIT_PLAN.md  DEMO_README.md  DEVELOPMENT_ENVIRONMENT_SETUP.md  FINAL_TDD_IMPLEMENTATION_SUMMARY.md  GIT_COMMIT_SUMMARY.md  QTE_DEMO_SYSTEM_ANALYSIS_REPORT.md  README.md  REMAINING_31_LINES_DEEP_ANALYSIS.md  REMAINING_CODE_COVERAGE_ANALYSIS.md  TDD_Enhancement_Summary.md  TDD_IMPLEMENTATION_SUMMARY.md  TDD_Implementation_Plan.md  TDD_PHASE2_PROGRESS_REPORT.md  TDD_PROGRESS_REPORT.md  UNTESTABLE_CODE_ANALYSIS_REPORT.md  VERSION.md  create_structure.ps1  creative-vnpy-event-conversion.md  creative-vnpy-gateway-architecture.md  event_classes.py  exchange_fixes_summary.md  implementation-plan.md  install_osx_fixed.sh  push_to_remote.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-qte-tdd-core.txt  requirements-qte-tdd.txt  requirements.txt  run_qte_demo.py  simple_ma_backtest.py  start_exchange.py  summary.md  tasks.md  test_diagnosis_report.md  test_simple.py  (+1 more)
cache/: BK.007001_day.csv  BK.007003_day.csv  BK.007004_day.csv  BK.007320_day.csv  BK.007427_day.csv  BK.007461_day.csv  CFFEX.IC00_day.csv  CFFEX.IC01.csv  CFFEX.IC_day.csv  CFFEX.IF_day.csv  CFFEX.IF_minute.csv  CFFEX.IF_tick.csv  DCE.m_minute.csv  DCE.m_tick.csv  SHFE.au_minute.csv  SHFE.au_tick.csv
config/: vnpy_settings.yml
demo/: __init__.py  advanced_trading_demo.py  comprehensive_demo.py  config_manager.py  datasource_ecosystem_demo.py  demo_test_suite.py  factory.py  ml_trading_demo.py  simple_trading_demo.py  (+3 more)
docs/: CI_CD_SETUP.md  (+7 more)
(+582 files in other folders)
