[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qte"
version = "0.1.0"
description = "量化回测引擎 - 高性能量化回测框架，支持向量化和事件驱动两种回测方式，以及机器学习集成"
readme = "README.md"
authors = [
    {name = "Quantitative Trading Engine Team"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.0.0",
    "matplotlib>=3.3.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.0.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.5b2",
    "flake8>=3.9.0",
]
ml = [
    "xgboost>=1.4.0",
    "lightgbm>=3.2.0",
]

[tool.setuptools]
packages = ["qte"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"